--- a/KylesBackendAPI/KylesBackendAPI.csproj
+++ b/KylesBackendAPI/KylesBackendAPI.csproj
@@ -19,4 +19,8 @@
     <Folder Include="Resumes\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include=".github\workflows\main.yml" />
+  </ItemGroup>
+
 </Project>
